--- a/EECIP/Views/Dashboard/Agency.cshtml
+++ b/EECIP/Views/Dashboard/Agency.cshtml
@@ -205,7 +205,7 @@
 
                                         @if (item.ACTIVE_INTEREST_IND != null && item.ACTIVE_INTEREST_IND == true)
                                         {
-                                            <a><i class="glyphicon glyphicon-heart" style="font-size: 20px; color:forestgreen; float:right"></i></a>
+                                            <a><i class="glyphicon glyphicon-heart" style="font-size: 20px; color:forestgreen; float:right" title="Active Interest"></i></a>
                                         }
 
                                         @Html.HiddenFor(modelItem => item.ENT_PLATFORM_IDX)
