--- a/EECIP/Views/Account/Register.cshtml
+++ b/EECIP/Views/Account/Register.cshtml
@@ -26,6 +26,7 @@
         <i class=" m-l-xs fa fa-question-circle" data-toggle="tooltip" data-placement="top" data-original-title="Only one account allowed per email address."></i>
         @Html.TextBoxFor(m => m.UserName, new { @class = "form-control input-lg focus", @placeholder = "test@example.com", @type="email" })
         @Html.ValidationMessageFor(m => m.UserName)
+        <span class="help-block"><i class="clip-info"></i> Registration is only available for government employees. Please register using a government-issued email.</span>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.ConfirmUserName, new { @class = "" })
