--- a/EECIP/Views/Admin/Users.cshtml
+++ b/EECIP/Views/Admin/Users.cshtml
@@ -25,10 +25,14 @@
                         <tr>
                             <td>
                                 <a href="@Url.Action("UserProfile","Account", new { id=item.USER_IDX, a="a" })" class="btn btn-rounded btn-xs btn-info"><i class="glyphicon glyphicon-pencil"></i></a>
+                                <div class="delete-section" style="display:inline">
+                                    <a class=" btn btn-rounded btn-xs btn-danger delete-link"><i class="glyphicon glyphicon-remove"></i></a>
+                                    <div class="btn btn-rounded btn-xs btn-warning delete-confirm" style="display:none" data-delete-id="@item.USER_IDX" data-delete-p="/Admin/UserDelete"><b>Confirm Delete</b></div>
+                                </div>
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.FNAME)
-                                    &nbsp;
+                                &nbsp;
                                 @Html.DisplayFor(modelItem => item.LNAME)
                             </td>
                             <td>
@@ -108,3 +112,6 @@
 </div>
 <!-- END MODAL FORM -->
 
+@section Scripts {
+    @Scripts.Render("~/bundles/confirmdelete")
+}
